update header, implement bootstrap, angular material,...

--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<header>
+  <div class="header__inner">
+    <button mat-flat-button class="header__toggle-sidebar">
+      <span class="material-icons">
+        menu
+      </span>
+    </button>
+    <a class="header__logo">
+      <img src="assets/images/logo.png" alt="logo" width="40" height="40">
+      <span>NGULAR</span>
+    </a>
+    <user-profile></user-profile>
+  </div>
+</header>
