--- a/src/app/modules/layout/dashboard/dashboard.component.html
+++ b/src/app/modules/layout/dashboard/dashboard.component.html
@@ -1,11 +1,13 @@
 <div class="dashboard__container">
-	<div class="dashboard__inner">
-		<app-header></app-header>
-		<div class="dashboard__body">
-			<app-sidebar></app-sidebar>
-			<div class="dashboard__router-outlet">
-				<router-outlet></router-outlet>
-			</div>
-		</div>
-	</div>
+  <div class="dashboard__inner">
+    <app-header></app-header>
+    <div class="dashboard__body">
+      <app-sidebar name="navbar" class="navbar-sidebar" *ngIf="!layoutConfig.layout.navbar.hidden">
+        <app-navbar class="navbar-left"></app-navbar>
+      </app-sidebar>
+      <div class="dashboard__router-outlet">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
 </div>
