--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -4,6 +4,10 @@
   padding: 0;
   border: 0;
   font-size: 100%;
+
+  :focus {
+    outline: none !important;
+  }
 }
 
 // Text rendering & box sizing
