--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font-family: 'Inter', 'Roboto', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
 }
 
 html,
