--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <div class="header__inner">
     <button mat-flat-button class="header__toggle-sidebar">
       <span class="material-icons">
@@ -6,9 +6,14 @@
       </span>
     </button>
     <a class="header__logo">
-      <img src="assets/images/logo.png" alt="logo" width="40" height="40">
+      <img src="assets/images/logo/logo.png" alt="logo" width="40" height="40">
       <span>NGULAR</span>
     </a>
-    <user-profile></user-profile>
+    <div class="header__right">
+      <language-selector></language-selector>
+      <search></search>
+      <notifications></notifications>
+      <user-profile></user-profile>
+    </div>
   </div>
 </header>
