--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.html
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.html
@@ -1,7 +1,29 @@
-<button mat-flat-button [matMenuTriggerFor]="user" class="user__toggle">
-  <img src="assets/images/user-avatar.jpg" alt="" width="40" height="40">
+<button mat-flat-button [matMenuTriggerFor]="user" class="user-profile__toggle">
+  <mat-icon class="material-icons-outlined">account_circle</mat-icon>
 </button>
-<mat-menu #user="matMenu">
-  <button mat-menu-item>Item 1</button>
-  <button mat-menu-item>Item 2</button>
+<mat-menu #user="matMenu" class="user-profile__dropdown">
+  <div class="user-profile__dropdown-header">
+    <span>Signed in as</span>
+    <span class="email">nguyenchinhhiep95@gmail.com</span>
+  </div>
+  <div class="user-profile__body">
+    <ul>
+      <li>
+        <button mat-menu-item>
+          <mat-icon class="material-icons-outlined">account_circle</mat-icon>
+          <span>Profile</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon class="material-icons-outlined">settings</mat-icon>
+          <span>Settings</span>
+        </button>
+      </li>
+    </ul>
+  </div>
+  <div class="user-profile__footer">
+    <button mat-menu-item>
+      <mat-icon class="material-icons-outlined">power_settings_new</mat-icon>
+      <span>Sign out</span>
+    </button>
+  </div>
 </mat-menu>
