update header style, setup theme scss files

--- a/src/app/modules/layout/components/header/language-selector/language-selector.component.html
+++ b/src/app/modules/layout/components/header/language-selector/language-selector.component.html
@@ -1,7 +1,7 @@
-<button mat-flat-button class="language-selector__toggle" [matMenuTriggerFor]="languageMenu">
+<button class="language-selector__toggle header__toggle-dropdown" [matMenuTriggerFor]="languageMenu">
   <span>{{selectedLanguage.id}}</span>
 </button>
-<mat-menu #languageMenu="matMenu" class="language-selector__dropdown">
+<mat-menu #languageMenu="matMenu" class="language-selector__dropdown" xPosition="before">
   <ul class="language-selector__list">
     <li mat-menu-item class="language-selector__item" *ngFor="let lang of languages; index as i" (click)="onLanguageChange(i)">
       <img class="language-selector__image" src="assets/images/languages/{{lang.flag}}.png" alt="{{lang.title}}">
