--- a/src/app/modules/layout/components/header/search/search.component.html
+++ b/src/app/modules/layout/components/header/search/search.component.html
@@ -1,3 +1,6 @@
-<button mat-flat-button class="search__toggle">
-  <mat-icon>search</mat-icon>
-</button>
+<div class="search__inner">
+  <mat-icon class="search__icon">
+    search
+  </mat-icon>
+  <input type="text" class="search__input" placeholder="Search">
+</div>
