--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.scss
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.scss
@@ -2,24 +2,26 @@
   display: flex;
 
   &__toggle {
-    background: transparent;
-    border-radius: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
+
 
     img {
       border-radius: 50%;
     }
   }
 
+  &__dropdown {
 
+    ul {
+      margin: 0;
+    }
+  }
+
+  
 
   &__dropdown-header {
     font-size: 1.4rem;
     padding: 1rem 1.6rem;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid;
  
 
     span {
@@ -32,17 +34,17 @@
     }
   }
 
-  &__body {
+  &__dropdown-body {
     padding: 1rem 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid;
 
-    ul {
-      margin: 0;
-    }
+   
   }
 
   &__footer {
     padding-top: 1rem;
   }
+
+  
 
 }
