--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,17 +1,17 @@
 <header class="header">
   <div class="header__inner">
-    <button mat-flat-button class="header__toggle-sidebar">
+    <button mat-icon-button class="header__toggle-sidebar">
       <span class="material-icons">
         menu
       </span>
     </button>
     <a class="header__logo">
-      <img src="assets/images/logo/logo.png" alt="logo" width="40" height="40">
+      <img src="assets/images/logo/logo.png" alt="logo" width="30" height="30">
       <span>NGULAR</span>
     </a>
     <div class="header__right">
-      <language-selector></language-selector>
       <search></search>
+      <language-selector></language-selector>
       <notifications></notifications>
       <user-profile></user-profile>
     </div>
