--- a/src/app/modules/layout/components/header/header.component.scss
+++ b/src/app/modules/layout/components/header/header.component.scss
@@ -5,19 +5,19 @@
   }
 
   .header {
-    height: 6.4rem;
+    height: 5.6rem;
     display: flex;
-    background-color: #1976d2;
-    color: #fff;
+    border-bottom: 1px solid;
 
     &__inner {
       flex-grow: 1;
       display: flex;
+      padding: 0 1.6rem;
 
       .header__toggle-sidebar {
         background-color: transparent;
-        border-radius: 0;
-        color: #fff
+        align-self: center;
+        margin-right: 1.6rem;
       }
 
       .header__logo {
@@ -25,8 +25,9 @@
         align-items: center;
 
         span {
-          font-size: 2rem;
-          letter-spacing: .3px;
+          font-size: 1.6rem;
+          letter-spacing: .5px;
+          font-weight: 600;
         }
       }
     }
@@ -36,5 +37,13 @@
       display: flex;
     }
 
+    &__toggle-dropdown {
+      background: transparent;
+      border-radius: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 5.6rem;
+    }
   }
 }
