--- a/src/app/modules/layout/components/header/notifications/notifications.component.scss
+++ b/src/app/modules/layout/components/header/notifications/notifications.component.scss
@@ -1,26 +1,21 @@
 .notifications {
   display: flex;
 
-  &__toggle {
-    background: transparent;
-    border-radius: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-
-    mat-icon {
-      color: #fff;
-    }
-  }
 
   &__dropdown {
-    min-width: 34rem !important;
+    min-width: 36rem!important;
+    max-width: 36rem!important;
+    border-radius: 4px;
+    max-height: calc(100vh - 80px);
+    overflow-y: hidden;
+    box-shadow: 0 10px 15px -3px rgba(0,0,0,.1), 0 4px 6px -2px rgba(0,0,0,.05);
+    display: flex;
+    flex-direction: column;
 
-    > .mat-menu-content {
-      padding: 0 !important;
-    }
     
+    .time {
+      font-size: 1.3rem;
+    }
 
     &-header {
       display: flex;
@@ -29,18 +24,24 @@
       font-size: 1.2rem;
       font-weight: 500;
       padding: 1.6rem;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid;
 
-      > span:first-child {
+      > span {
         text-transform: uppercase;
+        letter-spacing: .3px;
       }
 
       .mark-as-read {
         font-size: 1.3rem;
-        
+        cursor: pointer;
       }
     }
 
+  }
+
+  &__body {
+    flex-grow: 1;
+    overflow: auto;
   }
 
   &__list {
@@ -50,11 +51,8 @@
   &__item {
     cursor: pointer;
     padding: 1.4rem 1.6rem;
-    border-bottom: 1px solid #eee; 
+    border-bottom: 1px solid; 
 
-    &:hover {
-      background-color: rgba($color: #000000, $alpha: .1);
-    }
 
     &:last-child {
       border-bottom: none;
@@ -86,6 +84,10 @@
     padding: 1rem 1.6rem;
     font-size: 1.3rem;
     text-align: center;
-    border-top: 1px solid #eee;
+    border-top: 1px solid;
+
+    .view-all {
+      cursor: pointer;
+    }
   }
 }
