--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.html
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<button mat-flat-button [matMenuTriggerFor]="user" class="user-profile__toggle">
+<button [matMenuTriggerFor]="user" class="user-profile__toggle header__toggle-dropdown">
   <mat-icon class="material-icons-outlined">account_circle</mat-icon>
 </button>
 <mat-menu #user="matMenu" class="user-profile__dropdown">
@@ -6,24 +6,36 @@
     <span>Signed in as</span>
     <span class="email">nguyenchinhhiep95@gmail.com</span>
   </div>
-  <div class="user-profile__body">
+  <div class="user-profile__dropdown-body">
     <ul>
-      <li>
-        <button mat-menu-item>
-          <mat-icon class="material-icons-outlined">account_circle</mat-icon>
-          <span>Profile</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon class="material-icons-outlined">settings</mat-icon>
-          <span>Settings</span>
-        </button>
+      <li class="user-profile__dropdown-item">
+        <a>
+          <button mat-menu-item>
+            <mat-icon class="material-icons-outlined">account_circle</mat-icon>
+            <span>Profile</span>
+          </button>
+        </a>
+      </li>
+      <li class="user-profile__dropdown-item">
+        <a>
+          <button mat-menu-item>
+            <mat-icon class="material-icons-outlined">settings</mat-icon>
+            <span>Settings</span>
+          </button>
+        </a>
       </li>
     </ul>
   </div>
   <div class="user-profile__footer">
-    <button mat-menu-item>
-      <mat-icon class="material-icons-outlined">power_settings_new</mat-icon>
-      <span>Sign out</span>
-    </button>
+    <ul>
+      <li class="user-profile__dropdown-item">
+        <a>
+          <button mat-menu-item>
+            <mat-icon class="material-icons-outlined">power_settings_new</mat-icon>
+            <span>Sign out</span>
+          </button>
+        </a>
+      </li>
+    </ul>
   </div>
 </mat-menu>
