--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -6,3 +6,19 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
+@mixin common-theme($theme) {
+
+  @each $theme, $value in $themes {
+      $background: map-get($value, background );
+      $text-base: map-get($value, text-base);
+      
+
+      body.#{$theme} {
+        background-color: $background;
+        color: $text-base;
+      }
+       
+  }
+  
+}
