--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,6 +1,5 @@
-<header class="header">
-  <div class="header__inner">
-    <button mat-icon-button class="header__toggle-sidebar">
+<div class="header__inner">
+    <button mat-icon-button class="header__toggle-sidebar icon-primary">
       <span class="material-icons">
         menu
       </span>
@@ -15,5 +14,4 @@
       <notifications></notifications>
       <user-profile></user-profile>
     </div>
-  </div>
-</header>
+</div>
