--- a/src/app/modules/layout/components/header/notifications/notifications.theme.scss
+++ b/src/app/modules/layout/components/header/notifications/notifications.theme.scss
@@ -9,38 +9,12 @@
       $accent: map-get($value, accent);
       $icon-primary: map-get($value, icon-primary);
       $icon-secondary: map-get($value, icon-secondary);
-      $border-color-primary: map-get($value, border-color-primary);
-      $border-color-secondary: map-get($value, border-color-secondary);
+      $border-primary: map-get($value, border-primary);
+      $border-secondary: map-get($value, border-secondary);
 
       .#{$theme} {
 
-        .notifications {
-
-          &__dropdown {
-
-            &-header {
-              border-color: $border-color-secondary;
-              > span:first-child {
-                color: $text-secondary;
-              }
-            }
-
-            .mark-as-read, .view-all {
-              color: $accent;
-            }
-
-            .time {
-              color: $text-secondary;
-            }
-    
-          }
-
-          &__footer, &__item {
-            border-color: $border-color-secondary !important;
-          }
-
-          
-        }
+        
 
       }
        
