--- a/src/app/modules/layout/components/header/search/search.component.html
+++ b/src/app/modules/layout/components/header/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="search__inner">
-  <mat-icon class="search__icon">
+  <mat-icon class="search__icon icon-secondary">
     search
   </mat-icon>
-  <input type="text" class="search__input" placeholder="Search">
+  <input type="text" class="search__input border-primary" placeholder="Search">
 </div>
