--- a/src/app/modules/layout/components/header/search/search.theme.scss
+++ b/src/app/modules/layout/components/header/search/search.theme.scss
@@ -9,21 +9,10 @@
       $accent: map-get($value, accent);
       $icon-primary: map-get($value, icon-primary);
       $icon-secondary: map-get($value, icon-secondary);
-      $border-color-primary: map-get($value, border-color-primary);
+      $border-primary: map-get($value, border-primary);
 
       .#{$theme} {
 
-          .search {
-
-            &__icon {
-              color: $icon-secondary;
-            }
-
-            &__input {
-              border-color: $border-color-primary;
-              color: $text-secondary;
-            }
-          }
       }
        
   }
