--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.html
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.html
@@ -1,41 +1,28 @@
-<button [matMenuTriggerFor]="user" class="user-profile__toggle header__toggle-dropdown">
+<button #origin (click)="open(origin, userProfile)"
+  class="user-profile__toggle toggle-dropdown icon-primary cursor-pointer">
   <mat-icon class="material-icons-outlined">account_circle</mat-icon>
 </button>
-<mat-menu #user="matMenu" class="user-profile__dropdown">
-  <div class="user-profile__dropdown-header">
-    <span>Signed in as</span>
-    <span class="email">nguyenchinhhiep95@gmail.com</span>
+<ng-template #userProfile>
+  <div class="user-profile__dropdown text-primary">
+    <div class="user-profile__dropdown-header border-secondary">
+      <span>Signed in as</span>
+      <span class="email">nguyenchinhhiep95@gmail.com</span>
+    </div>
+    <div class="user-profile__dropdown-body border-secondary">
+      <button class="user-profile__dropdown-item cursor-pointer">
+        <mat-icon class="material-icons-outlined icon-secondary">account_circle</mat-icon>
+        <span>Profile</span>
+      </button>
+      <button class="user-profile__dropdown-item cursor-pointer">
+        <mat-icon class="material-icons-outlined icon-secondary">settings</mat-icon>
+        <span>Settings</span>
+      </button>
+    </div>
+    <div class="user-profile__dropdown-footer border-secondary">
+      <button class="user-profile__dropdown-item cursor-pointer">
+        <mat-icon class="material-icons-outlined icon-secondary">power_settings_new</mat-icon>
+        <span>Sign out</span>
+      </button>
+    </div>
   </div>
-  <div class="user-profile__dropdown-body">
-    <ul>
-      <li class="user-profile__dropdown-item">
-        <a>
-          <button mat-menu-item>
-            <mat-icon class="material-icons-outlined">account_circle</mat-icon>
-            <span>Profile</span>
-          </button>
-        </a>
-      </li>
-      <li class="user-profile__dropdown-item">
-        <a>
-          <button mat-menu-item>
-            <mat-icon class="material-icons-outlined">settings</mat-icon>
-            <span>Settings</span>
-          </button>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="user-profile__footer">
-    <ul>
-      <li class="user-profile__dropdown-item">
-        <a>
-          <button mat-menu-item>
-            <mat-icon class="material-icons-outlined">power_settings_new</mat-icon>
-            <span>Sign out</span>
-          </button>
-        </a>
-      </li>
-    </ul>
-  </div>
-</mat-menu>
+</ng-template>
