--- a/src/app/modules/layout/components/header/user-profile/user-profile.theme.scss
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.theme.scss
@@ -9,30 +9,13 @@
       $accent: map-get($value, accent);
       $icon-primary: map-get($value, icon-primary);
       $icon-secondary: map-get($value, icon-secondary);
-      $border-color-primary: map-get($value, border-color-primary);
-      $border-color-secondary: map-get($value, border-color-secondary);
+      $border-primary: map-get($value, border-primary);
+      $border-secondary: map-get($value, border-secondary);
 
       .#{$theme} {
 
           .user-profile {
-              
-            &__dropdown-header, &__dropdown-body {
-              border-color: $border-color-secondary !important;
-            }
 
-            &__dropdown {
-
-              mat-icon {
-                color: $icon-secondary;
-              }
-
-              &-item {
-                 
-                 span {
-                  color: $text-primary;
-                }
-              }
-            }
           }
       }
        
