--- a/src/scss/base/__base-dir.scss
+++ b/src/scss/base/__base-dir.scss
@@ -5,3 +5,4 @@ This file is used to contain all base imports.
 @import "./common";
 @import "./reset";
 @import "./typography";
+@import "./utilities";
