--- a/src/scss/themes/_default.scss
+++ b/src/scss/themes/_default.scss
@@ -4,44 +4,53 @@
 @import "src/app/modules/layout/components/header/language-selector/language-selector.theme";
 @import "src/app/modules/layout/components/header/search/search.theme.scss";
 @import './../base/common';
+@import './../base/utilities';
 
 $themes: (
-  'light': (
-    'primary': #ff0000,
-    "text-base": #212121,
-    'text-primary':#030303,
-    'text-secondary':#64748b,
-    "icon-primary": #606060,
-    "icon-secondary": #909090,
-    'accent': #065fd4,
-    'background': #fff,
-    'border-color-primary':#cbd4db,
-    'border-color-secondary':#e8ecee
+  light: (
+    primary: #ff0000,
+    text-base: #212121,
+    text-primary:#030303,
+    text-secondary:#64748b,
+    icon-primary: #606060,
+    icon-secondary: #909090,
+    accent: #065fd4,
+    background: #fff,
+    border-primary:#cbd4db,
+    border-secondary:#e8ecee
   ),
-  'dark': (
-    'primary': #ff0000,
-    "text-base": #fff,
-    'text-primary':#fff,
-    'text-secondary':#AAAAAA,
-    "icon-primary": #909090,
-    "icon-secondary": #909090,
-    'accent': #3EA6FF,
-    'background': #212121,
-    'border-color-primary': #4e4e4e,
-    'border-color-secondary': #4e4e4e
+  dark: (
+    primary: #ff0000,
+    text-base: #fff,
+    text-primary:#fff,
+    text-secondary:#AAAAAA,
+    icon-primary: #909090,
+    icon-secondary: #909090,
+    accent: #3EA6FF,
+    background: #212121,
+    border-primary: #4e4e4e,
+    border-secondary: #4e4e4e
   )
 );
 
 // Layout Theme
 @mixin layout-theme($themes) {
   @include header-theme($themes);
+}
+@include layout-theme($themes);
+
+// Components Theme 
+@mixin components-theme($themes) {
   @include notifications-theme($themes);
   @include language-selector-theme($themes);
   @include user-profile-theme($themes);
   @include search-theme($themes)
 }
+@include components-theme($themes);
 
-@include layout-theme($themes);
+// Utilities Theme
+@include utilities-theme($themes);
+
 
 // Common Theme
 @include common-theme($themes);
