--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.html
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.html
@@ -1,25 +1,25 @@
 <button #origin (click)="open(origin, userProfile)"
-  class="user-profile__toggle toggle-dropdown icon-primary cursor-pointer">
+  class="toggle-dropdown icon-primary cursor-pointer">
   <mat-icon class="material-icons-outlined">account_circle</mat-icon>
 </button>
 <ng-template #userProfile>
-  <div class="user-profile__dropdown text-primary">
-    <div class="user-profile__dropdown-header border-secondary">
+  <div class="user-profile text-primary">
+    <div class="user-profile__header border-secondary">
       <span>Signed in as</span>
       <span class="email">nguyenchinhhiep95@gmail.com</span>
     </div>
-    <div class="user-profile__dropdown-body border-secondary">
-      <button class="user-profile__dropdown-item cursor-pointer">
+    <div class="user-profile__body border-secondary">
+      <button class="user-profile__item cursor-pointer">
         <mat-icon class="material-icons-outlined icon-secondary">account_circle</mat-icon>
         <span>Profile</span>
       </button>
-      <button class="user-profile__dropdown-item cursor-pointer">
+      <button class="user-profile__item cursor-pointer">
         <mat-icon class="material-icons-outlined icon-secondary">settings</mat-icon>
         <span>Settings</span>
       </button>
     </div>
-    <div class="user-profile__dropdown-footer border-secondary">
-      <button class="user-profile__dropdown-item cursor-pointer">
+    <div class="user-profile__footer border-secondary">
+      <button class="user-profile__item cursor-pointer">
         <mat-icon class="material-icons-outlined icon-secondary">power_settings_new</mat-icon>
         <span>Sign out</span>
       </button>
