--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.scss
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.scss
@@ -1,17 +1,10 @@
-.user-profile {
+.user-profile-container {
   display: flex;
-
-  &__toggle {
-
-    img {
-      border-radius: 50%;
-    }
-  }  
 }
 
-.user-profile__dropdown {
+.user-profile {
 
-  &-header {
+  &__header {
     font-size: 1.4rem;
     padding: 1.6rem;
     border-bottom: 1px solid;
@@ -26,7 +19,7 @@
     }
   }
   
-  &-item {
+  &__item {
     display: flex;
     align-items: center;
     width: 100%;
@@ -41,13 +34,13 @@
     }
   }
 
-  &-body {
+  &__body {
     padding: 1rem 0;
     border-bottom: 1px solid;
    
   }
   
-  &-footer {
+  &__footer {
     padding: 1rem 0;
   }
 }
