--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.html
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.html
@@ -5,23 +5,23 @@
 <ng-template #userProfile>
   <div class="user-profile text-primary">
     <div class="user-profile__header border-secondary">
-      <span>Signed in as</span>
+      <span class="mb-2">Signed in as</span>
       <span class="email">nguyenchinhhiep95@gmail.com</span>
     </div>
     <div class="user-profile__body border-secondary">
-      <button class="user-profile__item cursor-pointer">
+      <button class="user-profile__item cursor-pointer background-hover">
         <mat-icon class="material-icons-outlined icon-secondary">account_circle</mat-icon>
-        <span>Profile</span>
+        <span class="text-primary">Profile</span>
       </button>
-      <button class="user-profile__item cursor-pointer">
+      <button class="user-profile__item cursor-pointer background-hover">
         <mat-icon class="material-icons-outlined icon-secondary">settings</mat-icon>
-        <span>Settings</span>
+        <span class="text-primary">Settings</span>
       </button>
     </div>
     <div class="user-profile__footer border-secondary">
-      <button class="user-profile__item cursor-pointer">
+      <button class="user-profile__item cursor-pointer background-hover">
         <mat-icon class="material-icons-outlined icon-secondary">power_settings_new</mat-icon>
-        <span>Sign out</span>
+        <span class="text-primary">Sign out</span>
       </button>
     </div>
   </div>
