--- a/src/app/modules/layout/components/header/notifications/notifications-item/notifications-item.component.html
+++ b/src/app/modules/layout/components/header/notifications/notifications-item/notifications-item.component.html
@@ -11,8 +11,8 @@
   </div>
   <div class="notifications__item-controls">
     <span class="status" (click)="toggleStatus()">
-      <mat-icon *ngIf="!item.hasRead" class="text-danger unread">fiber_manual_record</mat-icon>
-      <mat-icon *ngIf="item.hasRead" class="icon-secondary hasRead">fiber_manual_record</mat-icon>
+      <mat-icon *ngIf="!item.isRead" class="text-danger unread">fiber_manual_record</mat-icon>
+      <mat-icon *ngIf="item.isRead" class="icon-secondary hasRead">fiber_manual_record</mat-icon>
     </span>
     <span class="remove icon-secondary" (click)="remove()">
       <mat-icon>close</mat-icon>
