--- a/src/app/modules/layout/components/header/user-profile/user-profile.component.scss
+++ b/src/app/modules/layout/components/header/user-profile/user-profile.component.scss
@@ -14,7 +14,6 @@
     }
   
     .email {
-      font-size: 1.3rem;
       font-weight: 500;
     }
   }
@@ -27,7 +26,7 @@
     border: none;
     outline: none;
     background: transparent;
-    padding: 1rem 1.6rem;
+    padding: 1.6rem;
     
     mat-icon {
       margin-right: 1rem;
