--- a/src/scss/themes/_default.scss
+++ b/src/scss/themes/_default.scss
@@ -16,6 +16,7 @@ $themes: (
     icon-secondary: #909090,
     accent: #065fd4,
     background: #fff,
+    background-hover: rgba(0,0,0,0.05),
     border-primary:#cbd4db,
     border-secondary:#e8ecee
   ),
@@ -24,12 +25,13 @@ $themes: (
     text-base: #fff,
     text-primary:#fff,
     text-secondary:#AAAAAA,
-    icon-primary: #909090,
+    icon-primary: #fff,
     icon-secondary: #909090,
     accent: #3EA6FF,
     background: #212121,
+    background-hover: rgba(255,255,255,0.1),
     border-primary: #4e4e4e,
-    border-secondary: #4e4e4e
+    border-secondary: rgba(255,255,255,0.1)
   )
 );
 
